Fix spacing grid

--- a/src/app/pages/product-details/product-details.page.scss
+++ b/src/app/pages/product-details/product-details.page.scss
@@ -34,7 +34,7 @@
 }
 
 .product-grid {
-    margin-top: 30vh;
+    margin-top: 10vh;
     margin-left: 10vw;
 }
 
